# conductor-core

./: .gitignore  Dockerfile  README.md  pyproject.toml
conductor/: __init__.py  cli.py  config.py  container_entrypoint.py  diagram.py  execution.py  global_state.py  logging_utils.py  node.py  resources.py  utils.py
conductor/orchestrator/: __init__.py
dashboard/: app.py  requirements.txt  state.py  ui.py
dashboard/components/: mermaid.py
dashboard/pages/: __init__.py  deployment.py  designer.py  flows.py  operations.py  overview.py  schedules.py  settings.py
dashboard/services/: container_logs.py  deployments.py  git.py  logs.py  runtime.py  serialization.py
deploy/: dashboard.Dockerfile  docker-compose.yaml
deploy/config/: global.json
deploy/config/flows/: order-routing.json
docs/: dashboard.md  workflow.md
examples/: dashboard_inline_process.py  flow_easy.json  flow_functions.py  flow_inline_process_dashboard.json  flow_runtime_config.json  global.json  global_inline_process.json  runtime_inline_process.json  trace.json
examples/docker-node/: Dockerfile  handler.py
tests/: test_dashboard_runtime.py
